@@ -1,4 +1,28 @@
-# Network UPS Tools: data/html
+# Network UPS Tools: scripts/python
+
+# Recognize settings from configure.ac (for make install handling)
+nut_with_nut_monitor = @nut_with_nut_monitor@
+nut_with_nut_monitor_dir = @nut_with_nut_monitor_dir@
+nut_with_nut_monitor_py2gtk2 = @nut_with_nut_monitor_py2gtk2@
+nut_with_nut_monitor_py3qt5 =  @nut_with_nut_monitor_py3qt5@
+
+# Note: this may be "desktop-file-install" to use in e.g.
+# packaging postinstall scripts for tighter OS integration;
+# note also the icon files, etc. that may want symlinks to
+# system-defined locations. For examples please see e.g.
+# https://aur.archlinux.org/cgit/aur.git/tree/PKGBUILD?h=nut-monitor
+#nut_with_nut_monitor_desktop = @nut_with_nut_monitor_desktop@
+
+nut_with_pynut = @nut_with_pynut@
+nut_with_pynut_py =  @nut_with_pynut_py@
+nut_with_pynut_py2 = @nut_with_pynut_py2@
+nut_with_pynut_py3 = @nut_with_pynut_py3@
+
+PYTHON_SITE_PACKAGES =  @PYTHON_SITE_PACKAGES@
+PYTHON2_SITE_PACKAGES = @PYTHON2_SITE_PACKAGES@
+PYTHON3_SITE_PACKAGES = @PYTHON3_SITE_PACKAGES@
+
+BINDIR = @BINDIR@
 
 NUT_MONITOR_PY2GTK2 = \
 	app/ui/gui-1.3.glade \
@@ -7,7 +31,7 @@ NUT_MONITOR_PY2GTK2 = \
 NUT_MONITOR_PY2GTK2_TEMPLATE = \
 	app/NUT-Monitor-py2gtk2.in
 
-NUT_MONITOR_PY2GTK2_GENERATED = \
+NUT_MONITOR_PY2GTK2_GENERATED_SCRIPT = \
 	app/NUT-Monitor-py2gtk2
 
 NUT_MONITOR_PY3QT5 = \
@@ -20,7 +44,7 @@ NUT_MONITOR_PY3QT5 = \
 NUT_MONITOR_PY3QT5_TEMPLATE = \
 	app/NUT-Monitor-py3qt5.in
 
-NUT_MONITOR_PY3QT5_GENERATED = \
+NUT_MONITOR_PY3QT5_GENERATED_SCRIPT = \
 	app/NUT-Monitor-py3qt5
 
 NUT_MONITOR_COMMON = \
@@ -31,14 +55,16 @@ NUT_MONITOR_COMMON = \
 	app/icons/256x256/nut-monitor.png \
 	app/icons/scalable/nut-monitor.svg \
 	app/README \
-	app/pixmaps/var-rw.png \
-	app/pixmaps/on_line.png \
-	app/pixmaps/warning.png \
 	app/pixmaps/on_battery.png \
+	app/pixmaps/on_line.png \
 	app/pixmaps/var-ro.png \
+	app/pixmaps/var-rw.png \
+	app/pixmaps/warning.png \
 	app/locale/fr/LC_MESSAGES/NUT-Monitor.mo \
 	app/locale/it/LC_MESSAGES/NUT-Monitor.mo \
-	app/locale/ru/LC_MESSAGES/NUT-Monitor.mo \
+	app/locale/ru/LC_MESSAGES/NUT-Monitor.mo
+
+PYNUT_COMMON = \
 	module/README
 
 # Note: we both distribute and install the generated *.mo translation files
@@ -47,30 +73,94 @@ NUT_MONITOR_COMMON_TEMPLATE = \
 	app/locale/NUT-Monitor.pot \
 	app/locale/fr/fr.po \
 	app/locale/it/it.po \
-	app/locale/ru/ru.po \
+	app/locale/ru/ru.po
+
+PYNUT_TEMPLATE = \
 	module/PyNUT.py.in \
 	module/test_nutclient.py.in
 
-NUT_MONITOR_COMMON_GENERATED = \
-	module/PyNUT.py \
+PYNUT_GENERATED_NOEXEC = \
+	module/PyNUT.py
+
+PYNUT_GENERATED_SCRIPT = \
 	module/test_nutclient.py
 
 # For now, we have a "dispatcher" script and applet manifest,
 # to select a functional choice of the GUI client, if possible:
-NUT_MONITOR_DISPATCHER = \
-	app/NUT-Monitor \
+NUT_MONITOR_DISPATCHER_NOEXEC = \
 	app/nut-monitor.desktop
+NUT_MONITOR_DISPATCHER_SCRIPT = \
+	app/NUT-Monitor
 
+#################################################################
 # `make dist` tarball contents:
 EXTRA_DIST = \
-	$(NUT_MONITOR_DISPATCHER) \
-	$(NUT_MONITOR_COMMON) $(NUT_MONITOR_COMMON_TEMPLATE)
+	$(NUT_MONITOR_DISPATCHER_NOEXEC) $(NUT_MONITOR_DISPATCHER_SCRIPT) \
+	$(NUT_MONITOR_COMMON) $(NUT_MONITOR_COMMON_TEMPLATE) \
+	$(PYNUT_COMMON) $(PYNUT_TEMPLATE)
 
-# TODO: Make py2/py3-only builds, delivered preferred symlinks, etc. optional?
 EXTRA_DIST += $(NUT_MONITOR_PY2GTK2) $(NUT_MONITOR_PY2GTK2_TEMPLATE)
 EXTRA_DIST += $(NUT_MONITOR_PY3QT5) $(NUT_MONITOR_PY3QT5_TEMPLATE)
+
+#################################################################
+# `make install` handling (nobase_ to keep tree structure):
+# Make py2/py3-only builds, delivered preferred symlinks, etc. optional
+if WITH_NUT_MONITOR
+nutmonitordir = $(nut_with_nut_monitor_dir)
+nobase_nutmonitor_DATA = $(NUT_MONITOR_DISPATCHER_NOEXEC) $(NUT_MONITOR_COMMON)
+nobase_nutmonitor_SCRIPTS = $(NUT_MONITOR_DISPATCHER_SCRIPT)
+
+if WITH_NUT_MONITOR_PY2GTK2
+nobase_nutmonitor_DATA += $(NUT_MONITOR_PY2GTK2)
+nobase_nutmonitor_SCRIPTS += $(NUT_MONITOR_PY2GTK2_GENERATED_SCRIPT)
+endif WITH_NUT_MONITOR_PY2GTK2
+
+if WITH_NUT_MONITOR_PY3QT5
+nobase_nutmonitor_DATA += $(NUT_MONITOR_PY3QT5)
+nobase_nutmonitor_SCRIPTS += $(NUT_MONITOR_PY3QT5_GENERATED_SCRIPT)
+endif WITH_NUT_MONITOR_PY3QT5
+
+if WITH_PYNUT_APP
+nobase_nutmonitor_DATA += $(PYNUT_COMMON) $(PYNUT_GENERATED_NOEXEC)
+nobase_nutmonitor_SCRIPTS += $(PYNUT_GENERATED_SCRIPT)
+endif WITH_PYNUT_APP
+
+sysbindir = $(BINDIR)
+sysbin_SCRIPTS = NUT-Monitor
+
+# Dummy redirector for /usr/bin/... presence
+NUT-Monitor: Makefile
+	@echo '#!/bin/sh' > "$@"
+	@echo 'exec "$(nutmonitordir)/app/NUT-Monitor" "$$@"' >> "$@"
+
+endif WITH_NUT_MONITOR
+
+
+# These are dumped into site-packages directly, right?
+if WITH_PYNUT_PY
+pynut_py_sitedir = $(PYTHON_SITE_PACKAGES)
+pynut_py_site_DATA = $(PYNUT_GENERATED_NOEXEC)
+pynut_py_site_SCRIPTS = $(PYNUT_GENERATED_SCRIPT)
+endif
+
+
+if WITH_PYNUT_PY2
+pynut_py2_sitedir = $(PYTHON2_SITE_PACKAGES)
+pynut_py2_site_DATA = $(PYNUT_GENERATED_NOEXEC)
+pynut_py2_site_SCRIPTS = $(PYNUT_GENERATED_SCRIPT)
+endif
+
+
+if WITH_PYNUT_PY3
+pynut_py3_sitedir = $(PYTHON3_SITE_PACKAGES)
+pynut_py3_site_DATA = $(PYNUT_GENERATED_NOEXEC)
+pynut_py3_site_SCRIPTS = $(PYNUT_GENERATED_SCRIPT)
+endif
+
+#################################################################
 
 MAINTAINERCLEANFILES = Makefile.in .dirstamp
 
 clean-local:
 	rm -rf *.pyc __pycache__ */*.pyc */__pycache__ */*/*.pyc */*/__pycache__
+	rm -f NUT-Monitor
